syntax = "proto3";

package furanrpc;

service FuranExecutor {
  rpc StartBuild (BuildRequest) returns (BuildRequestResponse) {}
  rpc GetBuildStatus (BuildStatusRequest) returns (BuildStatusResponse) {}
  rpc MonitorBuild (BuildStatusRequest) returns (stream BuildEvent) {}
  rpc CancelBuild (BuildCancelRequest) returns (BuildCancelResponse) {}
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

message BuildDefinition {
  string github_repo = 1;
  string dockerfile_path = 2;
  string ref = 3; // GitHub ref (sha/branch/tag)
  repeated string tags = 4;
  bool tag_with_commit_sha = 5;
  map<string, string> args = 6;
  bool disable_build_cache = 7;
}

message PushRegistryDefinition {
  string repo = 1;
}

message PushDefinition {
  repeated PushRegistryDefinition registries = 1;
}

// Requests

message BuildRequest {
  BuildDefinition build = 1;
  PushDefinition push = 2;
  bool skip_if_exists = 3; // all tags exist in all image repos
}

message BuildStatusRequest {
  string build_id = 1;
}

message BuildCancelRequest {
  string build_id = 1;
}

// Responses

message BuildRequestResponse {
  string build_id = 1;
}

message BuildCancelResponse {
  string build_id = 1;
}

enum BuildState {
  UNKNOWN = 0;
  NOTSTARTED = 1;
  SKIPPED = 2;
  RUNNING = 3;
  FAILURE = 4;
  SUCCESS = 5;
  CANCELLED = 6;
}

message BuildStatusResponse {
  string build_id = 1;
  BuildRequest build_request = 2;
  BuildState state = 3;
  Timestamp started = 4;
  Timestamp completed = 5;
}

message BuildEvent {
  string build_id = 1;
  string message = 2;
  BuildState current_state = 3;
}
